at: faster editing, avoid sticky covering focus

--- a/src/App.css
+++ b/src/App.css
@@ -368,6 +368,10 @@ input[type="number"] {
   margin-top: 0.8rem;
 }
 
+.airtable table {
+  width: 0;
+}
+
 .airtable td, .airtable th {
   padding: 0;
   border: 1px solid #ddd;
@@ -401,6 +405,7 @@ input[type="number"] {
 
 .airtable td {
   position: relative;
+  width: 500px !important;
 }
 
 .airtable span {
